--- a/dependency/web.gradle
+++ b/dependency/web.gradle
@@ -2,6 +2,8 @@
 dependencies{
     compile "org.springframework:spring-webmvc:4.3.3.RELEASE"
     compile "org.springframework:spring-jdbc:4.3.3.RELEASE"
+    compile "org.aspectj:aspectjweaver:1.8.9"
+    compile "com.fasterxml.jackson.core:jackson-databind:2.8.4"
 
 
     compile "ch.qos.logback:logback-classic:1.1.7"
