--- a/web-system/src/main/webapp/WEB-INF/web.xml
+++ b/web-system/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,10 @@
     </listener>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring/spring-mvc.xml</param-value>
+        <param-value>
+            classpath*:spring/applicationContext.xml,
+            classpath*:spring/spring-mvc.xml
+        </param-value>
     </context-param>
 
     <filter>
@@ -30,9 +33,9 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:spring/spring-mvc.xml</param-value>
+            <param-value>classpath*:spring/spring-mvc.xml</param-value>
         </init-param>
-        <!-- <load-on-startup>1</load-on-startup> -->
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
