--- a/dependency/web.gradle
+++ b/dependency/web.gradle
@@ -1,20 +1,30 @@
-
-dependencies{
+dependencies {
+    //spring
     compile "org.springframework:spring-webmvc:4.3.3.RELEASE"
     compile "org.springframework:spring-jdbc:4.3.3.RELEASE"
+    compile "org.springframework:spring-context-support:4.3.3.RELEASE"
     compile "org.aspectj:aspectjweaver:1.8.9"
     compile "com.fasterxml.jackson.core:jackson-databind:2.8.4"
+    compile "cglib:cglib:3.2.4"
 
-
+    //日志
     compile "ch.qos.logback:logback-classic:1.1.7"
     compile "org.slf4j:jcl-over-slf4j:1.7.21"
 
+    //数据库
+    compile "com.alibaba:druid:1.0.26"
     compile "mysql:mysql-connector-java:6.0.5"
     compile "org.mybatis:mybatis:3.4.1"
     compile "org.mybatis:mybatis-spring:1.3.0"
 
+    //java web
     compile "javax.servlet:jstl:1.2"
     providedCompile "javax.servlet:javax.servlet-api:3.1.0"
+
+    //java security
+    compile "org.apache.shiro:shiro-web:1.3.2"
+    compile "org.apache.shiro:shiro-spring:1.3.2"
+    compile "org.apache.shiro:shiro-ehcache:1.3.2"
 
     testCompile "junit:junit:4.11"
 }
