--- a/web-system/src/main/webapp/WEB-INF/web.xml
+++ b/web-system/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,7 @@
         <param-value>
             classpath*:spring/applicationContext.xml,
             classpath*:spring/spring-mvc.xml
+            classpath*:spring/spring-shiro.xml
         </param-value>
     </context-param>
 
